# modular-monolith

./: .Cargo.toml.swp  Cargo.toml
base_pricer/: Cargo.toml
base_pricer/src/: lib.rs
holiday_pricer/: Cargo.toml
holiday_pricer/src/: lib.rs
order_history/: Cargo.toml
order_history/src/: lib.rs
pricer/: Cargo.toml
pricer/src/: lib.rs
product_finder/: Cargo.toml
product_finder/src/: lib.rs
search_service/: Cargo.toml
search_service/src/: main.rs
types/src/: lib.rs
