[package]
name = "search_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
product_finder = { path = "../product_finder" }
pricer = { path = "../pricer" }
order_history = { path = "../order_history" }
